Call api to get people and mount a list with them

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -112,7 +112,7 @@
 
     <!-- Eyes color -->
     <ion-item>
-      <ion-label>Cor do cabelo</ion-label>
+      <ion-label>Cor do olhos</ion-label>
       <ion-select [(ngModel)]="eyes">
         <ion-option value="1">Azuis</ion-option>
         <ion-option value="2">Castanhos claros</ion-option>
@@ -142,7 +142,6 @@
 
   <!-- Submit button -->
   <div padding>
-    <!-- <button class="start-button" (click)="goToSearch()">Buscar</button> -->
-    <button class="start-button">Buscar</button>
+    <button class="start-button" (click)="getPeople()">Buscar</button>
   </div>
 </ion-content>
