Tap card and show person details

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,5 @@
 
 <ion-content padding>
   <img src="assets/img/ddpa.png" />
-  <button class="start-button" (click)="goToSearch()">Iniciar Pesquisa</button>
+  <button class="start-button" (click)="goToSearch()">Iniciar busca</button>
 </ion-content>
