--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -21,6 +21,7 @@
       <ion-card-title>  
         {{ person.name }}
       </ion-card-title>
+      <button ion-button (click)="goToDetails(person)">+ Informações</button>
     </ion-card-content>
 
   </ion-card>
