--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Formulário de Pesquisa</ion-title>
+    <ion-title>Formulário de busca</ion-title>
   </ion-navbar>
 
 </ion-header>
