trial share button

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -68,7 +68,7 @@
         <p style="color: #F7CC38;"><b>Deficiente</b>: {{ person.disabled ? "Sim" : "Não"  }}</p>
 
         <br/>
-      <button ion-button style="background-color: #F7CC38; color: #040809;display: block;margin: auto;border-radius: 10px;" (click)="generatePoster(person)">Gerar cartazete</button>
+      <button ion-button style="background-color: #F7CC38; color: #040809;display: block;margin: auto;border-radius: 10px;" (click)="generatePoster(person)">Ver cartazete</button>
     </ion-card-content>
 
   </ion-card>
