--- a/src/pages/poster/poster.html
+++ b/src/pages/poster/poster.html
@@ -15,4 +15,6 @@
 
 <ion-content padding style="background-color: black;">
   <img src="{{ posterUrl }}" style="height: 100%;width: 100%;margin-top: -15px;" />
+
+  <button ion-button (click)="share()">Compartilhar</button>
 </ion-content>
