--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -16,7 +16,7 @@
 <ion-content padding style="background-color: #040809;">
   <ion-card style="border: 1px solid #ead083; background-color: #040809;">
   
-    <img src="{{ photoUrl }}" style="max-height: 425px;max-width: 325px;" />
+    <img src="{{ photoUrl }}" style="max-height: 425px;max-width: 325px;display: block; margin: auto;" />
     <ion-card-content>
       <ion-card-title style="color: #F7CC38;text-align: center;">  
         {{ person.name }}
