--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -18,7 +18,7 @@
   
     <div style="border: 1px solid #ead083;padding: 15px;">
  
-      <img src="{{ getImage(person) }}" style="max-height: 425px;max-width: 325px;" />
+      <img src="{{ getImage(person) }}" style="max-height: 425px;max-width: 325px;display: block;margin: auto;" />
       <ion-card-content>
         <ion-card-title style="color: #F7CC38;text-align: center;">  
           {{ person.name }}
