--- a/src/pages/poster/poster.html
+++ b/src/pages/poster/poster.html
@@ -16,5 +16,5 @@
 <ion-content padding style="background-color: black;">
   <img src="{{ posterUrl }}" style="height: 100%;width: 100%;margin-top: -15px;" />
 
-  <button ion-button (click)="share()">Compartilhar</button>
+  <button ion-button (click)="share()" style="background-color: #F7CC38; color: #040809;display: block;margin: auto;border-radius: 10px;margin-top: 20px;">Compartilhar</button>
 </ion-content>
