Fix search to specific charactaristics

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -143,9 +143,10 @@
     <!-- Tattoo -->
     <ion-item style="background-color: #040809; color: #F7CC38;">
     <ion-label style="background-color: #040809; color: #F7CC38;">Tatuagem</ion-label>
-      <ion-select [(ngModel)]="tattoo" placeholder="Não">
-        <ion-option value="1">Sim</ion-option>
-        <ion-option value="0">Não</ion-option>
+      <ion-select [(ngModel)]="tattoo">
+        <ion-option value="Sim">Sim</ion-option>
+        <ion-option value="Não">Não</ion-option>
+        <ion-option value="">Nenhum</ion-option>
       </ion-select>
     </ion-item>
     <br/>
@@ -153,9 +154,10 @@
     <!-- Scar -->
     <ion-item style="background-color: #040809; color: #F7CC38;">
     <ion-label style="background-color: #040809; color: #F7CC38;">Cicatriz</ion-label>
-      <ion-select [(ngModel)]="scar" placeholder="Não">
-        <ion-option value="1">Sim</ion-option>
-        <ion-option value="0">Não</ion-option>
+      <ion-select [(ngModel)]="scar">
+        <ion-option value="Sim">Sim</ion-option>
+        <ion-option value="Não">Não</ion-option>
+        <ion-option value="">Nenhum</ion-option>
       </ion-select>
     </ion-item>
     <br/>
@@ -163,9 +165,10 @@
     <!-- Amputee -->
     <ion-item style="background-color: #040809; color: #F7CC38;">
     <ion-label style="background-color: #040809; color: #F7CC38;">Amputado</ion-label>
-      <ion-select [(ngModel)]="amputee" placeholder="Não">
-        <ion-option value="1">Sim</ion-option>
-        <ion-option value="0">Não</ion-option>
+      <ion-select [(ngModel)]="amputee">
+        <ion-option value="Sim">Sim</ion-option>
+        <ion-option value="Não">Não</ion-option>
+        <ion-option value="">Nenhum</ion-option>
       </ion-select>
     </ion-item>
     <br/>
@@ -173,9 +176,10 @@
     <!-- Deficiente -->
     <ion-item style="background-color: #040809; color: #F7CC38;">
     <ion-label style="background-color: #040809; color: #F7CC38;">Deficiente</ion-label>
-      <ion-select [(ngModel)]="disabled" placeholder="Não">
-        <ion-option value="1">Sim</ion-option>
-        <ion-option value="0">Não</ion-option>
+      <ion-select [(ngModel)]="disabled">
+        <ion-option value="Sim">Sim</ion-option>
+        <ion-option value="Não">Não</ion-option>
+        <ion-option value="">Nenhum</ion-option>
       </ion-select>
     </ion-item>
     <br/>
