--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,6 @@
-<!-- <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Busca de Desaparecido
-    </ion-title>
-  </ion-navbar>
-</ion-header> -->
-
 <ion-content padding style="background-color: #040809;">
-  <img src="assets/img/capa1.jpg" style="height: 70%; width: 100%;" />
+  <img src="assets/img/capa2.jpg" style="height: 70%; width: 100%;" />
   <button class="start-button" (click)="goToSearch()">Iniciar busca</button>
+
+  <p class="credits">Desenvolvido por <a href="http://www.unirio.br/">UNIRIO</a></p>
 </ion-content>
